kubernetes/sftpgo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftpgo
  namespace: sftpgo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sftpgo

  template:
    metadata:
      labels:
        app: sftpgo

    spec:
      containers:
        - name: sftpgo
          image: drakkan/sftpgo:latest

          ports:
            - containerPort: 2022
            - containerPort: 80

          volumeMounts:
            - name: sftpgo-storage
              mountPath: /var/lib/sftpgo

      volumes:
        - name: sftpgo-storage
          persistentVolumeClaim:
            claimName: sftpgo-data
